force-app/main/default/objects/ServiceResource/fields/Adresse_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Adresse_e_mail__c</fullName>
    <formula>RelatedRecord.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse e-mail</label>
    <type>Text</type>
</CustomField>