force-app/main/default/objects/ServiceResource/fields/Numero_de_station__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_station__c</fullName>
    <label>Numéro de station</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>