force-app/main/default/objects/ServiceResource/fields/Numero_de_telephone__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_telephone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de téléphone</label>
    <type>Text</type>
</CustomField>