force-app/main/default/objects/ServiceResource/fields/NumeroStationSansEspace__c.field-meta.xml
<CustomField>
    <fullName>NumeroStationSansEspace__c</fullName>
    <formula>TRIM(TEXT( Numero_de_station__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NumeroStationSansEspace</label>
    <type>Text</type>
</CustomField>