force-app/main/default/objects/ServiceResource/fields/Station_externe__c.field-meta.xml
<CustomField>
    <fullName>Station_externe__c</fullName>
    <formula>IF(
				LEN(TEXT(Numero_de_station__c)) &gt;= 4,
				false,
				IF(
				    ISBLANK(Numero_de_station__c),
								false,
								true
				)
)</formula>
    <label>Station externe</label>
    <type>Checkbox</type>
</CustomField>