force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>Adresse_e_mail__c</columns>
    <columns>IsActive</columns>
    <columns>Station_externe__c</columns>
    <columns>Numero_de_station__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les ressources de service</label>
</ListView>