force-app/main/default/objects/ServiceResource/listViews/Ambassadeurs_internes.listView-meta.xml
<ListView>
    <fullName>Ambassadeurs_internes</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>Adresse_e_mail__c</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Station_externe__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Ambassadeurs internes</label>
</ListView>