force-app/main/default/objects/ServiceResource/listViews/My_ServiceResources.listView-meta.xml
<ListView>
    <fullName>My_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>Adresse_e_mail__c</columns>
    <columns>IsActive</columns>
    <filterScope>Mine</filterScope>
    <label>Mes ressources de service</label>
</ListView>