force-app/main/default/objects/ServiceResource/listViews/Ressources_actives.listView-meta.xml
<ListView>
    <fullName>Ressources_actives</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>Adresse_e_mail__c</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ressources actives</label>
</ListView>