force-app/main/default/objects/ServiceResource/listViews/Stations_externes.listView-meta.xml
<ListView>
    <fullName>Stations_externes</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>Adresse_e_mail__c</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Station_externe__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Stations externes</label>
</ListView>